MicroServicefromscratch/infra/k8s/posts.yml
apiVersion: v1
kind: Pod
metadata:
  name: posts
spec:
  containers:
    - name: posts
      image: immi98/posts:latest
