MicroServicefromscratch/infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  #selector and metadata inside template is used by deployment to identify a pod
  #matchLabels -> gives data to be matched from the template metadata (here app is given) 
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: noelimmi/client:latest
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client
  #By default if type is not specified in spec, then it will create
  #ClusterIP
  type: ClusterIP
  ports: 
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
