MicroServicefromscratch/infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1
  #selector and metadata inside template is used by deployment to identify a pod
  #matchLabels -> gives data to be matched from the template metadata (here app is given) 
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: noelimmi/comments:latest
---
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  selector:
    app: comments
  #By default if type is not specified in spec, then it will create
  #ClusterIP
  type: ClusterIP
  ports: 
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
