MicroServicefromscratch/infra/k8s/event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
spec:
  replicas: 1
  #selector and metadata inside template is used by deployment to identify a pod
  #matchLabels -> gives data to be matched from the template metadata (here app is given) 
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: noelimmi/event-bus:latest
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  selector:
    app: event-bus
  #By default if type is not specified in spec, then it will create
  #ClusterIP
  type: ClusterIP
  ports: 
    - name: event-bus
      protocol: TCP
      port: 4005
      targetPort: 4005
