MicroServicefromscratch/infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1
  #selector and metadata inside template is used by deployment to identify a pod
  #matchLabels -> gives data to be matched from the template metadata (here app is given) 
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: noelimmi/query:latest
---
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  selector:
    app: query
  #By default if type is not specified in spec, then it will create
  #ClusterIP
  type: ClusterIP
  ports: 
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
